objects/Ignore_Validations__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to ignore the validation rule to be run for the profiles and users</description>
    <fields>
        <fullName>Ignore_Secure_Sharing_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Secure Sharing Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ignore_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the profile / user requires validation rule to be ignored across the apps usage</description>
        <inlineHelpText>Checked if the profile / user requires validation rule to be ignored across the apps usage</inlineHelpText>
        <label>Ignore Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Network_Case_Ignore_Lockdown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Network Case Ignore Lockdown</label>
        <type>Checkbox</type>
    </fields>
    <label>Ignore Validations</label>
</CustomObject>